@@ -4455,7 +4455,7 @@ loop:			for(int i = lineNo + 1; i < getLineCount(); i++)
 		{
 			// Return each row of the selection on a new line
 			int start = s.start - getLineStartOffset(s.startLine);
-			int end = s.end - getLineEndOffset(s.endLine);
+			int end = s.end - getLineStartOffset(s.endLine);
 
 			// Certain rectangles satisfy this condition...
 			if(end < start)
